# aiagent

./: agent.go  go.mod  go.sum  image.sh  log.txt  long_term_memory.json  start.sh
cert/: cert.pem  key.pem
cpp_agent/: .gitignore  CHANGELOG.md  CMakeLists.txt  IDE_SETUP.md  README.md  build.sh  build_and_deploy.sh  config.json.example  main.cpp
cpp_agent/llm/: llm.cpp  llm.h
cpp_agent/memory/: long_term.cpp  long_term.h  short_term.cpp  short_term.h
cpp_agent/tts/: tts.cpp  tts.h
cpp_agent/utils/: config.cpp  config.h  http_utils.cpp  http_utils.h  json_parser.cpp  json_parser.h  logger.cpp  logger.h
data/: long_term_memory.json
llm/: llm.go
memory/: long_term.go  short_term.go
static/: index.html
tts/: tts.go
util/: long_memory.go  util.go
